@@ -1,19 +1,22 @@
 \name{accuracy}
 \alias{accuracy}
 \title{Accuracy measures for forecast model}
-\usage{accuracy(f, x, test=NULL)
+\usage{accuracy(f, x, test=NULL,d=as.numeric(frequency(x) == 1),
+  D=as.numeric(frequency(x) > 1))
 }
 
 \arguments{
 \item{f}{An object of class \code{"forecast"}, or a numerical vector containing forecasts. It will also work with \code{Arima}, \code{ets} and \code{lm} objects if \code{x} is omitted -- in which case in-sample accuracy measures are returned.}
 \item{x}{An optional numerical vector containing actual values of the same length as object, or a time series overlapping with the times of \code{f}.}
 \item{test}{Indicator of which elements of x and f to test. If \code{test} is \code{NULL}, all elements are used. Otherwise test is a numeric vector containing the indices of the elements to use in the test.}
+\item{d}{An integer indicates the number of differencing is used for MASE calculation.}
+\item{D}{An integer indicates the number of seasonal differencing is used for MASE calculation.}
 }
 
 \description{Returns range of summary measures of the forecast accuracy. If \code{x} is provided, the function measures out-of-sample (test set) forecast accuracy
 based on x-f. If \code{x} is not provided, the function only produces in-sample (training set) accuracy measures of the forecasts based on f["x"]-fitted(f).
 All measures are defined and discussed in Hyndman and Koehler (2006).}
-\details{MASE calculation is scaled using MAE of in-sample naive forecasts for non-seasonal time series, in-sample seasonal naive forecasts for seasonal time series and in-sample mean forecasts for non-time series data.}
+\details{MASE calculation is scaled using MAE of in-sample naive forecasts for non-seasonal time series, in-sample seasonal naive forecasts for seasonal time series and in-sample mean forecasts for non-time series data by default.}
 
 \value{Matrix giving forecast accuracy measures.
 }
